[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/PauseScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://misc/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/cheese_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://scenes/rotcheese_ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://misc/normaltxt.tres" type="Theme" id=7]
[ext_resource path="res://scenes/cheeswald_mesh.tscn" type="PackedScene" id=8]
[ext_resource path="res://3d/rotten.tres" type="Material" id=9]
[ext_resource path="res://sounds/jumpsfx.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/fanfare.mp3" type="AudioStream" id=11]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereMesh" id=7]
material = ExtResource( 9 )
radius = 0.1
height = 0.2
radial_segments = 6
rings = 6

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="CubeMesh" id=9]
material = SubResource( 8 )
size = Vector3( 0.05, 5, 0.05 )

[sub_resource type="World" id=4]
environment = ExtResource( 5 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Anim:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh/animated_cheeswald:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2, 2, 2 ), Vector3( 2, 0.5, 2 ), Vector3( 1, 3, 1 ), Vector3( 2, 2, 2 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "jump_fast"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Mesh/animated_cheeswald:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 2, 2, 2 ), Vector3( 2, 0.5, 2 ), Vector3( 1, 3, 1 ), Vector3( 2, 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anim:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.95 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 1.0 ]
}

[sub_resource type="BoxShape" id=12]
extents = Vector3( 0.321156, 0.431767, 0.266121 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )
SPEED = 5
MOVE_MULTI = 3.0
MAX_FALL_SPEED = 80
y_sens = 0.25
x_sens = 0.25
joy_y_sens = 15
joy_x_sens = 20
MULTI_SPT = 2
DEADZONE = 0.35

[node name="PauseScreen" parent="." instance=ExtResource( 2 )]

[node name="shadow" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.5, 0 )
spring_length = 200.0
margin = 0.9

[node name="CSGCylinder2" type="CSGCylinder" parent="shadow"]
transform = Transform( 0.3, 0, 0, 0, -2.18557e-09, 0.3, 0, -0.05, -1.31134e-08, 0, 0, 0 )
radius = 0.975
height = 0.02
material = SubResource( 3 )

[node name="Mesh" type="CollisionShape" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.0344505, 0 )
shape = SubResource( 1 )

[node name="animated_cheeswald" parent="Mesh" instance=ExtResource( 8 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1.01433, 0 )

[node name="double_jump" type="CPUParticles" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 0.93974, -0.341889, 0, 0.341889, 0.93974, 0, -0.525151, -0.194163 )
emitting = false
amount = 32
one_shot = true
speed_scale = 3.0
randomness = 0.3
lifetime_randomness = 0.5
fixed_fps = 30
draw_order = 2
mesh = SubResource( 7 )
emission_shape = 1
emission_sphere_radius = 0.2
initial_velocity_random = 0.2
angular_velocity_random = 0.5
radial_accel = -2.0
radial_accel_random = 1.0
damping = 8.7
angle = 720.0
angle_random = 1.0

[node name="speed" type="CPUParticles" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.676999, -2.14911 )
emitting = false
amount = 32
lifetime = 2.0
speed_scale = 3.0
draw_order = 1
mesh = SubResource( 9 )
emission_shape = 2
emission_box_extents = Vector3( 2, 2, 2 )
angular_velocity = 3.0

[node name="Pivot" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
spring_length = 10.0
margin = 1.0

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.806542 )
doppler_tracking = 1
current = true
near = 0.01
far = 500.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="cont" type="HBoxContainer" parent="."]
margin_left = 1332.0
margin_top = 968.0
margin_right = 1891.0
margin_bottom = 1054.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cheesprite" type="Sprite" parent="cont"]
position = Vector2( 449, 9 )
offset = Vector2( 0, 25 )

[node name="Viewport" type="Viewport" parent="cont/cheesprite"]
size = Vector2( 160, 80 )
own_world = true
world = SubResource( 4 )
transparent_bg = true
render_target_v_flip = true

[node name="cheese_ui" parent="cont/cheesprite/Viewport" instance=ExtResource( 4 )]

[node name="Cheeses" type="Label" parent="cont"]
margin_left = 516.0
margin_right = 559.0
margin_bottom = 86.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cont2" type="HBoxContainer" parent="."]
margin_left = 1360.0
margin_top = 964.0
margin_right = 1703.0
margin_bottom = 1050.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cont2"]
margin_left = 300.0
margin_right = 343.0
margin_bottom = 86.0
theme = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rotcheesprite" type="Sprite" parent="cont2"]
position = Vector2( 221, 25 )
offset = Vector2( 0, 20 )

[node name="Viewport" type="Viewport" parent="cont2/rotcheesprite"]
size = Vector2( 160, 80 )
own_world = true
world = SubResource( 4 )
transparent_bg = true
render_target_v_flip = true

[node name="rotcheese_ui" parent="cont2/rotcheesprite/Viewport" instance=ExtResource( 6 )]

[node name="big_alert_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="big_alert" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -128.0
margin_right = 256.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 2206, 65 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][rainbow freq=0.2 sat=10 val=20][center]YOU GOT A CHEESE!"
text = "YOU GOT A CHEESE!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alert" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -260.0
margin_right = 320.0
margin_bottom = -4.0
theme = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center][rainbow freq=0.2 sat=10 val=20]I BELIEVE I CAN FLY![/rainbow]
I ate this rotten cheese, and now my stomach hurts, but maybe i can use it as propulsion to [wave amp=50 freq=5][color=lime]jump in the air[/color][/wave]"
text = "I BELIEVE I CAN FLY!
I ate this rotten cheese, and now my stomach hurts, but maybe i can use it as propulsion to jump in the air"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="alert_timer" type="Timer" parent="."]

[node name="Anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/jump = SubResource( 5 )
anims/jump_fast = SubResource( 11 )

[node name="jumpsfx" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.528833, 0 )
stream = ExtResource( 10 )
unit_db = 15.0

[node name="Music_player" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 966, 582 )
volume_db = 5.0

[node name="fanfare" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 966, 582 )
stream = ExtResource( 11 )
volume_db = 5.0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.710977, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0247985, 0 )
shape = SubResource( 12 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="big_alert_timer" to="." method="_on_big_alert_timer_timeout"]
[connection signal="timeout" from="alert_timer" to="." method="_on_alert_timer_timeout"]
[connection signal="finished" from="fanfare" to="." method="_on_fanfare_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]

[editable path="Mesh/animated_cheeswald"]
